resized images in units 1-6 and replaced aud_anatomy_overview.jpg with a corrected one

--- a/_units/01.md
+++ b/_units/01.md
@@ -221,7 +221,7 @@ A *cosine wave* appears exactly the same as a sine wave, shifted $1/4$
 of a period to the left.
 {% include img-figure url="/MUTOR/assets/images/sin-cos-90phase.png" 
                       description="The relationship between a sine
-					  and a cosine." %}
+					  and a cosine." width="400px" %}
 Where a sine wave was the position along the y-axis, a cosine wave
 is the position of the same point along the x-axis.
 {% include img-figure url="/MUTOR/assets/images/Cosine.gif" 
