--- a/_units/02.md
+++ b/_units/02.md
@@ -100,7 +100,7 @@ The cochlea, often referred to as the "hearing organ", is most important to the 
 
 The cochlea is a coiled, fluid-filled tubular structure. It is lined with membranes which divide the inside of the cochlea into fluid-filled compartments.
 
-{% include img-figure url="/MUTOR/assets/images/cochlea_dissected.png" description="Cochlea Dissected" %}
+{% include img-figure url="/MUTOR/assets/images/cochlea_dissected.png" description="Cochlea Dissected" width="400px" %}
 {% comment %} (image source: http://www.iurc.montp.inserm.fr/cric/audition/english /cochlea/fcochlea.htm) {% endcomment%}
 
 A dissected cochlea of a human fetus.
@@ -130,7 +130,7 @@ In its resting state, the basilar and tectorial membranes are parallel, the ster
 {% include img-figure url="/MUTOR/assets/images/ihc_mvnt.png" description="Inner Hair Cells" %}
 {% comment %} Close-up of inner hair cells with stereocilia, which open when excited by incoming sound. {% endcomment%}
 
-{% include img-figure url="/MUTOR/assets/images/ihc_ohc.png" description="Inner and Outer Hair Cells" %}
+{% include img-figure url="/MUTOR/assets/images/ihc_ohc.png" description="Inner and Outer Hair Cells" width="400px" %}
 {% comment %} Electron microscropy showing one row of inner hair cells and three rows of outer hair cells. {% endcomment%}
 
 # Tonotopic Mapping
@@ -140,15 +140,15 @@ The cochlea is a coiled structure, contains the entire length of the basilar mem
 {% include img-figure url="/MUTOR/assets/images/basilar_unrolled.png" description="Basilar Membrane Unrolled" %}
 {% comment %} (image source: http://www.cs.indiana.edu/~port/teach/641/hearing.for.linguists.html) Drawing of the unrolled cochlea, showing the basilar membrane. {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/videos/animated_basilar.gif" description="Basilar Membrane Traveling Wave Animation" %}
+{% include img-figure url="/MUTOR/assets/videos/animated_basilar.gif" description="Basilar Membrane Traveling Wave Animation" width="400px" %}
 {% comment %} (image source: http://www.cs.indiana.edu/~port/teach Animation of a wave travelling down the basilar membrane.
 /641/hearing.for.linguists.html) {% endcomment %}
 {% comment %} ALSO, IT IS LOOKING HORRIBLE! {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/tonotopy.png" description="Tonotopy Basilar Membrane" %}
+{% include img-figure url="/MUTOR/assets/images/tonotopy.png" description="Tonotopy Basilar Membrane" width="400px" %}
 {% comment %} (image source: Watts, 1993) Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length. {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/bekesy.png" description="Data on Tonotopy from von Békésy " %}
+{% include img-figure url="/MUTOR/assets/images/bekesy.png" description="Data on Tonotopy from von Békésy " width="auto" height="500px" %}
 {% comment %} (image source: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746) {% endcomment %}
 
 The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stapes (stirrup). The point of optimal excitation moved further away from the stapes as the stimulus frequency decreased.
@@ -157,15 +157,15 @@ The observation of tonotopic mapping on the basilar membrane was first made by G
 
 The brainstem and midbrain include a set of neural regions which relay the nerve impulses passed into the central nervous system via the auditory nerve. Each of these relay centers consists of a group of neurons specialized for computations which are important to the auditory system, such as amplitude change detection and sound source localization.
 
-{% include img-figure url="/MUTOR/assets/images/brainstem_anat.png" description="Brainstem Anatomy" %}
+{% include img-figure url="/MUTOR/assets/images/brainstem_anat.png" description="Brainstem Anatomy" width="auto" height="500px" %}
 
-{% include img-figure url="/MUTOR/assets/images/brainstem_diagram.png" description="Brainstem Diagram" %}
+{% include img-figure url="/MUTOR/assets/images/brainstem_diagram.png" description="Brainstem Diagram" width="400px" %}
 {% comment %} (image source: http://serous.med.buffalo.edu/hearing/ic.html) {% endcomment %}
 {% comment %} Anatomy of the brainstem, with the auditory pathway highlighted. {% endcomment %}
 
 The auditory nerve leads out of the cochlea and into the brainstem. On the surface of the brainstem, the auditory and the vestibular nerves combine and constitute the VIIIth cranial nerve. A tumor in the VIIIth cranial nerve is called acoustic neuroma and can result in deafness.
 
-{% include img-figure url="/MUTOR/assets/images/cn8.png" description="Cranial Nerve VIII (auditory nerve in red)" %}
+{% include img-figure url="/MUTOR/assets/images/cn8.png" description="Cranial Nerve VIII (auditory nerve in red)" width="500px" %}
 {% comment %} Cranial nerve, with the VIIIth nerve (auditory nerve) in red.
 (image source: http://www.gwc.maricopa.edu/class/bio201) {% endcomment %}
 
@@ -194,14 +194,14 @@ The auditory system's ability to localize sounds depends to a certain extent on 
 
 Jeffress (1948) proposed a model of how the auditory system computes interaural time differences so as to localize sounds. The model involved a coincidence detector in the brain, in the form of a set of neurons that fire when the two sounds from the left and right ears reach the neuron simultaneously. These coincidence detection neurons were later found in the Nucleus Leminaris of the owl (Carr & Konishi, 1988), which corresponds to the Medial Superior Olive of mammals (Smith et al, 1998). The Lateral Superior Olive was found to be sensitive to level differences between the ears. Since the MSO is sensitive to ITDs and the LSO is sensitive to ILDs, together the superior olivary complex is responsible for much of binaural hearing.
 
-{% include img-figure url="/MUTOR/assets/images/itd.jpg" description="Interaural Time Difference" %}
-{% include img-figure url="/MUTOR/assets/images/ild.jpg" description="Interaural Level Difference" %}
+{% include img-figure url="/MUTOR/assets/images/itd.jpg" description="Interaural Time Difference" width="500px" %}
+{% include img-figure url="/MUTOR/assets/images/ild.jpg" description="Interaural Level Difference" width="500px" %}
 {% comment %} Illustrations of the concepts of A) interaural time difference (ITD) and B) interaural level difference (ILD). {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/mso_coincidence1.jpg" description="A. Model of Coincidence Cetection" %}
+{% include img-figure url="/MUTOR/assets/images/mso_coincidence1.jpg" description="A. Model of Coincidence Cetection" width="400px" %}
 {% comment %} (image source: http://www.physiology.wisc.edu A. Jeffress's (1948) model of coincidence detection. {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/mso_coincidence2.jpg" description="B. Physiological Implementation of Coincidence Detection" %}
+{% include img-figure url="/MUTOR/assets/images/mso_coincidence2.jpg" description="B. Physiological Implementation of Coincidence Detection" width="300px" %}
 {% comment %} B. Coincidence detectors for computing interaural time differences /yin/jorissmithyin98.pdf) {% endcomment %}
 {% comment %} LOOKS MOVED TO THE LEFT :/ {% endcomment %}
 
@@ -216,7 +216,7 @@ The lateral lemniscus is anatomically divided into the Ventral, Dorsal, and Inte
 
 The inferior colliculus is a collection of nuclei which receives input from the axons of the lateral lemniscus and is located in the midbrain. It operates as a site of early communication between the visual and auditory senses, as well as a feedback-providing mechanism which provides output to the cochlea.
 
-{% include img-figure url="/MUTOR/assets/images/ic.jpg" description="Inferior Colliculus" %}
+{% include img-figure url="/MUTOR/assets/images/ic.jpg" description="Inferior Colliculus" width="300px" %}
 {% comment %} (image source: http://serous.med.buffalo.edu/hearing/ic.html) Cross-section of the midbrain, with the inferior colliculi highlighted in blue. {% endcomment %}
 
 The inferior colliculus is one of the most important relay centers in the auditory system. Roles of the inferior colliculus include crossmodal communication, orienting to novel stimuli, providing efferent feedback, and detecting amplitude and frequency modulation.
@@ -231,7 +231,7 @@ Modulation detection refers to the ability of the auditory system to detect rapi
 
 One of the roles of the inferior colliculus, and also the inferior colliculus, seems to be to reflect amplitude modulation (McKinney et al, 2001). Amplitude modulation refers to the change in amplitude levels, usually at periodic rates. In musical performance, playing tremolo typically results in amplitude modulation. AM radio also relies on the application of amplitude modulation.
 
-{% include img-figure url="/MUTOR/assets/images/ttremolo.gif" description="Tremolo" %}
+{% include img-figure url="/MUTOR/assets/images/ttremolo.gif" description="Tremolo" width="300px" %}
 {% comment %} Tremolo - a case of amplitude modulation
 (image source: http://www.compositiontoday.com/sound_bank {% endcomment %}
 
@@ -245,7 +245,7 @@ The medial geniculate nucleus (MGN) is located In the thalamus, and is the last 
 
 The medial geniculate nucleus contains a division that is tonotopically organized. The primary function of the medial geniculate nucleus is to relay auditory impulses to the cortex.
 
-{% include img-figure url="/MUTOR/assets/images/mgn.jpg" description="Medial Geniculus Nucleus" %}
+{% include img-figure url="/MUTOR/assets/images/mgn.jpg" description="Medial Geniculus Nucleus" width="400px" %}
 {% comment %} The medial geniculate nuclei, shown here in green.
 (image source: http://sylvius.com)  {% endcomment %}
 
@@ -255,12 +255,12 @@ Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual c
 
 The auditory cortex is located just under the sylvian fissure, which is the fold that divides the temporal lobe from the frontal and parital lobes in the brain.
 
-{% include img-figure url="/MUTOR/assets/images/audctx1-2.png" description="The Sylvian fissure, with the Auditory Cortex below it." %}
+{% include img-figure url="/MUTOR/assets/images/audctx1-2.png" description="The Sylvian fissure, with the Auditory Cortex below it." width="500px" %}
 {% comment %} (image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html) {% endcomment %}
 
 The auditory cortex includes primary and secondary auditory cortices. The PrimaryAuditoryCortex (also known as A1) is located on the temporal plane, which is delineated by the Sylvian fissure on the top surface of the temporal lobe. The SecondaryAuditoryCortex (A2) surrounds the primary auditory cortex. The primary auditory cortex is tonotopically organized, with the lateral edge of the Sylvian fissure being sensitive to lower frequencies and the medial part of the cortex being sensitive to high frequencies. The primary auditory cortex is responsible for the perception of pitch, rhythm and duration, whereas the secondary auditory cortex is responsible for pattern perception, which includes the perception of speech and melodies. Persons with lesioned auditory cortices have trouble perceiving music; this is a condition known as amusia. (Peretz et al, 2003)
 
-{% include img-figure url="/MUTOR/assets/images/a1_a2.jpg" description="Auditory Cortex" %}
+{% include img-figure url="/MUTOR/assets/images/a1_a2.jpg" description="Auditory Cortex" width="400px" %}
 {% comment %} (image source: http://www.utdallas.edu/~tres/integ/sen5/display9_21.html) {% endcomment %}
 
 Primary and secondary auditory cortices. A1 is shown here in blue and A2 is in red. The primary auditory cortex is tonotopically organized.
@@ -300,7 +300,7 @@ While various animals are able to hear and have auditory systems, only a few spe
 
 While the act of music making is universal to all cultures in human society, only a few species of animals are known to make music systematically. Nonhuman species that sing include birds, whales, and monkeys.
 
-{% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" %}
+{% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" width="400px" %}
 {% comment %} (image source: Hauser & McDermott, 2003. Nature Neuroscience.) Some singing animals, and spectrograms of the songs they
 make. {% endcomment %}
 
@@ -423,7 +423,7 @@ Sensorineural hearing loss refers to damage in the cochlea or the auditory nerve
 Presbyacusis is the loss of hearing as a result of old age. The hearing loss quite common and is most prominent at high frequencies. While the healthy young individual can hear an optimal frequency range of 20-20,000Hz, The average 50 year old can no longer hear above 17,000Hz. Because of the shape of the audiogram, which relates audibility to frequency, the loss of high-frequency hearing due to sound exposure and old age is termed ski-slope hearing loss.
 
 
-{% include img-figure url="/MUTOR/assets/images/normalvsdamaged.jpg" description="Comparison Normal Hair Cell vs. Damaged Hair Cell" %}
+{% include img-figure url="/MUTOR/assets/images/normalvsdamaged.jpg" description="Comparison Normal Hair Cell vs. Damaged Hair Cell" width="400px" %}
 {% comment %} (image source: http://www.hei.org/education/health/loss.htm) Normal versus damaged hair cells {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/audiogram_presby.jpg" description="Presbyacusis Audiogram" %}
@@ -444,8 +444,8 @@ When in quiet environments, we may occasionally hear a ringing in the ears. This
 1. Avoid loud sounds.
 1. Use protection for your ears.
 
-{% include img-figure url="/MUTOR/assets/images/earmuffs.jpg" description="Ear Muffs" %}
-{% include img-figure url="/MUTOR/assets/images/earplugs.jpg" description="Ear Plugs" %}
+{% include img-figure url="/MUTOR/assets/images/earmuffs.jpg" description="Ear Muffs" width="200px" %}
+{% include img-figure url="/MUTOR/assets/images/earplugs.jpg" description="Ear Plugs" width="200px" %}
 
 A rock concert generally produces sounds at around 100dB. While this is an extremely loud baseline of sound level, rock concerts tend to have relatively little dynamic variation. Sounds of 120dB or more are perceived as painfully loud.
 
@@ -457,7 +457,7 @@ If you are continually exposed to sounds above 85dB, you should wear protective 
 
 For more powerful hearing protection, especially from sudden sounds such as gunshots, one can purchase over-the-ear muffs, which provide up to 40dB of sound attenuation. To ensure maximal hearing protection, the best strategy is to combine the uses of earplugs and ear muffs, as their added contribution to sound attenuation is more effective than their individual contributions.
 
-{% include img-figure url="/MUTOR/assets/images/protection_attenuation.gif" description="Protection Attenuation" %}
+{% include img-figure url="/MUTOR/assets/images/protection_attenuation.gif" description="Protection Attenuation" width="500px" %}
 Various types of hearing protection and their noise reduction rates, as a function of frequency. {% comment %} (image source: Rossing, Moore & Wheeler, 2001) {% endcomment %}
 
 # Summary
