--- a/_units/04.md
+++ b/_units/04.md
@@ -185,7 +185,7 @@ membrane to the other.
 {% include img-figure url="/MUTOR/assets/images/bekesy.png"
 description="von B&eacute;k&eacute;sy's measurement of basilar membrane 
 displacement as a function of frequency and position along the length of 
-the membrane." %}
+the membrane." width="300px" %}
 Figure {{ fignum }} shows von B&eacute;k&eacute;sy's measurements of the 
 displacement of the basilar membrane in response to auditory stimuli
 of different frequencies {% include cite ref="bekesy_nobel" %}. 
@@ -325,7 +325,7 @@ chord from Arnold Schoenberg's work *Farben*, Op. 16.
 
 {% include img-figure url="/MUTOR/assets/images/farbenex.png"
 description="Roughness estimates for three orchestrations of the same
-harmony from Arnold Schoenberg's Farben, Op. 16." %}
+harmony from Arnold Schoenberg's Farben, Op. 16." width="400px" %}
 
 {% include begin-figure description="Farben, first orchestration" %}
 <audio controls>
@@ -420,7 +420,7 @@ plot is greatly reduced than that of the minor second.
 
 # Top-Down Processing and Its Effect on Dissonance
 
-## Interval Heirarchies
+## Interval Hierarchies
 
 Our perception of dissonance is not absolute, that is to say, context matters.
 In 1968, Kameoka and Kuriyagawa demonstrated 
@@ -431,7 +431,7 @@ Kameoka and Kuriyagawa's hierarchy of intervals." %}
 {% include end-figure %}
 
 {% include img-figure url="/MUTOR/assets/images/kameoka-hierarchy.png"
-description="Interval hierarchy (Kameoka and Kuriyagawa)" %}
+description="Interval hierarchy (Kameoka and Kuriyagawa)" width="350px" %}
 
 
 ## Counterpoint and the Wright-Bregman Hypothesis
