--- a/_units/05.md
+++ b/_units/05.md
@@ -121,7 +121,7 @@ For centuries, hearing and musical scientists have attempted to build an optimal
 
 Spectral models of pitch perception, which are based on the frequency spectrum of sounds, tend to start with the Fourier analysis, which convert sound waves into its frequency components. One of the early spectral or place models was proposed by Helmholtz who speculated that each sinusoidal component of a sound triggers sensation at a place coding for pitch. Thus, the ear is a frequency analyzer: Sounds create "resonances" on the basilar membrane triggering nerve impulses.
 
-{% include img-figure url="/MUTOR/assets/images/unit5_AuditoryFilterbank.png" description="Representations of a harmonic complex tone with a fundamental frequency (F0) of 440 Hz. The upper panel shows the power spectrum. The second panel shows the auditory filterbank, representing the filtering that occurs in the cochlea. The third panel shows the the time-averaged output of the filterbank, or excitation pattern. The fourth panel shows some sample time waveforms at the output of the filterbank, including filters centered at the F0 and the fourth harmonic, illustrating resolved harmonics, and filters centered at the 8th and 12th harmonic of the complex, illustrating harmonics that are less well resolved and show amplitude modulations at a rate corresponding to the F0." %}
+{% include img-figure url="/MUTOR/assets/images/unit5_AuditoryFilterbank.png" description="Representations of a harmonic complex tone with a fundamental frequency (F0) of 440 Hz. The upper panel shows the power spectrum. The second panel shows the auditory filterbank, representing the filtering that occurs in the cochlea. The third panel shows the the time-averaged output of the filterbank, or excitation pattern. The fourth panel shows some sample time waveforms at the output of the filterbank, including filters centered at the F0 and the fourth harmonic, illustrating resolved harmonics, and filters centered at the 8th and 12th harmonic of the complex, illustrating harmonics that are less well resolved and show amplitude modulations at a rate corresponding to the F0." width="400px" %}
 (Source: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4215732/)
 
 ## Temporal Models and Phase Locking
@@ -138,7 +138,7 @@ Modern theories of pitch perception take into account both spectral and temporal
 
 The autocorrelation models (Licklider, 1959, further developed by Lyon / Slaney and Patterson) use a measure of self-similarity of a waveform in order to derive its fundamental. It is based on the idea that a periodic waveform, when phase-shifted to exactly one period of its fundamental away from a starting point, should correlate perfectly with itself. By comparing the time lag between perfectly correlated frequency components, the model can derive the period of the complex sound, and thus the fundamental frequency. These models give credibility by being capable of explaining typical miscalculations of the auditory system which, by instance, arise when detuning lower partials of a harmomic sound or transposing down sounds consisting of odd partials only.
 
-{% include img-figure url="/MUTOR/assets/images/The-autocorrelogram-A-for-a-200-Hz-fundamental-harmonic-complex-computed-by-taking-the_W640.jpg" description="Autocorrelogram (top) and summary autocorrelogram (bottom)" %}
+{% include img-figure url="/MUTOR/assets/images/The-autocorrelogram-A-for-a-200-Hz-fundamental-harmonic-complex-computed-by-taking-the_W640.jpg" description="Autocorrelogram (top) and summary autocorrelogram (bottom)" width="400px" %}
 
 {% include note author="vg" text="the same as in Unit 02 I have commented all the quotes and references so we can decide a format to do it" %}
 {% comment %} Yost, W.A. Pitch perception. Attention, Perception, & Psychophysics 71, 1701–1715 (2009).  {% endcomment %}
@@ -151,11 +151,11 @@ The debate between pattern matching and autocorrelation models have received wid
 
 American psychologist Roger Shepard has developed a cognitive psychological model that represents pitch in a helix. In this case, the circular chroma circle (horizontal) can be distinguished from height (vertical). Octaves are always on the same side of the helix. By a clever construction tones can be formed, in which the dimension of the height is eliminated. These sounds, called "Shepard tones", are useful for constructing auditory illusions, e.g. endlessly rising or falling glissandi or scales.
 
-{% include img-figure url="/MUTOR/assets/images/helix.jpeg" description="Shepard's pitch helix. A similar model was already created in the mid-1800s." %}
+{% include img-figure url="/MUTOR/assets/images/helix.jpeg" description="Shepard's pitch helix. A similar model was already created in the mid-1800s." width="350px" %}
 
 Taking the importance of fifths into consideration, Shepard extended his model to a double helix.
 
-{% include img-figure url="/MUTOR/assets/images/Helix-Fifths-Relationsship.jpg" description="Shepard's double helix of pitch" %}
+{% include img-figure url="/MUTOR/assets/images/Helix-Fifths-Relationsship.jpg" description="Shepard's double helix of pitch" width="200px" %}
 
 A five-dimensional model projecting the helix onto a torus accounts for third-relationships and the closed circle of fifths.
 
@@ -226,7 +226,7 @@ In this method, subjects listen to cadences and scales, with the target sound (t
 
 By analyzing the data, three groups emerged which, depending on their musical background, were more or less able to perceive tonal hierarchies in major or minor context (the figure on the right shows results typical of experienced musicians).
 
-{% include img-figure url="/MUTOR/assets/images/ProbeTone-Method.png" description="Probe Tone Method" %}
+{% include img-figure url="/MUTOR/assets/images/ProbeTone-Method.png" description="Probe Tone Method" width="400px" %}
 
 # Key Space
 
@@ -241,7 +241,7 @@ Video showing continuously modulating melody activating the surface of the torus
 
 Interestingly, Arnold Schönberg in his book "Structural Functions of Harmony" devised a chart of key regions which is strikingly similar to the torus unfolded into two dimensions.
 
-{% include img-figure url="/MUTOR/assets/images/chart-of-key-regions.png" description="Schoenberg's Chart of Key Regions" %}
+{% include img-figure url="/MUTOR/assets/images/chart-of-key-regions.png" description="Schoenberg's Chart of Key Regions" width="500px" %}
 
 
 # Applications of Key Space
