--- a/_units/06.md
+++ b/_units/06.md
@@ -124,10 +124,10 @@ where $$n$$ is the sample numder, $$N$$ is the number of samples in the
 spectrum, $$f(n)$$ and $$a(n)$$ are the frequency and amplitude of 
 bin $$n$$, respectively.
 
-{% include img-figure url="/MUTOR/assets/images/tpt.ff.A4_spec.png" description="The spectrum of a trumpet playing A4 (440 Hz) <em>fortissimo</em>. The red line shows the spectral centroid. Compare with the figure below to see how it moves when the same note is played quieter." %}
+{% include img-figure url="/MUTOR/assets/images/tpt.ff.A4_spec.png" description="The spectrum of a trumpet playing A4 (440 Hz) <em>fortissimo</em>. The red line shows the spectral centroid. Compare with the figure below to see how it moves when the same note is played quieter." width="500px" %}
 {% assign fig-tpt-ff = fignum %}
 <audio controls><source src="/MUTOR/assets/audios/tpt.ff.A4.mp3" type="audio/mpeg"></audio>
-{% include img-figure url="/MUTOR/assets/images/tpt.pp.A4_spec.png" description="The spectrum of a trumpet playing A4 (440 Hz) <em>pianissimo</em>. The red line shows the spectral centroid. Compare with the figure above to see how it moves when the same note is played louder." %}
+{% include img-figure url="/MUTOR/assets/images/tpt.pp.A4_spec.png" description="The spectrum of a trumpet playing A4 (440 Hz) <em>pianissimo</em>. The red line shows the spectral centroid. Compare with the figure above to see how it moves when the same note is played louder." width="500px" %}
 {% assign fig-tpt-pp = fignum %}
 <audio controls><source src="/MUTOR/assets/audios/tpt.pp.A4.mp3" type="audio/mpeg"></audio>
 Figures {{ fig-tpt-ff }} and {{ fig-tpt-pp }} both show the spectrum of
@@ -154,7 +154,7 @@ have formants as well, due to their geometry construction, feature that
 was exploited to great effect by Alvin Lucier in his recording
 *I Am Sitting in a Room*. 
 
-{% include img-figure url="/MUTOR/assets/images/formants-benade.png" description="The formant structure of three different vowel sounds." %}
+{% include img-figure url="/MUTOR/assets/images/formants-benade.png" description="The formant structure of three different vowel sounds." width="300px" %}
 Figure {{ fignum }} shows the formant structure of three different vowels.
 {% include note author="jm" text="these need to be redone (they are from Benade), and potentially should correlate with the table below, and have an interactive example." %}
 
@@ -204,7 +204,7 @@ impact on the timbre of a sound. Most notably, the middle and low
 registers of the clarinet have very weak even partials; compare
 the two plots of a cello (red) and a clarinet (blue) both playing
 (middle) C4 (261 Hz) inthe figure below.
-{% include img-figure url="/MUTOR/assets/images/cello_clar_C4.png" description="The spectra of a cello (red) and a clarinet (blue) each playing C4 (middle C). Note that the even partials of the clarinet have almost no energy." %}
+{% include img-figure url="/MUTOR/assets/images/cello_clar_C4.png" description="The spectra of a cello (red) and a clarinet (blue) each playing C4 (middle C). Note that the even partials of the clarinet have almost no energy." width="500px" %}
 {% include note author="jm" text="this needs to be a better plot so you can see the two more clearly. should have a sound example to accompany." %}
 The missing even partials contribute to the "woody" or "hollow" sound
 characteristic of the clarinet.
@@ -365,12 +365,12 @@ from experience: one pair of instruments playing a dyad can produce quite
 a different result than another playing the same dyad. For example, compare
 the spectra of two cellos playing a low major 3rd (Gb-Bb), with that of
 two bassoons playing the same interval.
-{% include img-figure url="/MUTOR/assets/images/Cellos_G2B2.png" description="Spectra of two cellos playing G2 and B2." %}
+{% include img-figure url="/MUTOR/assets/images/Cellos_G2B2.png" description="Spectra of two cellos playing G2 and B2." width="500px" %}
 {% assign cellos_thirds = fignum %}
 <audio controls>
 <source src="/MUTOR/assets/audios/cello.mf.G2-B2.mp3" type="audio/mpeg">
 </audio>
-{% include img-figure url="/MUTOR/assets/images/Bassoons_G2B2.png" description="Spectra of twy bassoons playing G2 and B2, the same interval as above. Note the tightly spaced partials pointed to by the arrows." %}
+{% include img-figure url="/MUTOR/assets/images/Bassoons_G2B2.png" description="Spectra of twy bassoons playing G2 and B2, the same interval as above. Note the tightly spaced partials pointed to by the arrows." width="500px" %}
 {% assign bassoons_thirds = fignum %}
 <audio controls>
 <source src="/MUTOR/assets/audios/Bassoon.mf.G2-B2.mp3" type="audio/mpeg">
@@ -388,7 +388,7 @@ The type of timbral variation on the same pitches we saw above was
 explored in a melodic fashion by Arnold Schoneberg in the third
 of his *F&uuml;nf Orchesterst&uuml;ke, Op. 16*, which opens by
 alternating between two different orchestrations of the same chord:
-{% include img-figure url="/MUTOR/assets/images/farbenex_orch.png" description="The two orchestrations of the opening chord of Schoenberg's <em>Farben</em>." %}
+{% include img-figure url="/MUTOR/assets/images/farbenex_orch.png" description="The two orchestrations of the opening chord of Schoenberg's <em>Farben</em>." width="400px" %}
 <audio controls>
 <source src="/MUTOR/assets/audios/farben-orch1.mp3" type="audio/mpeg">
 </audio>
