--- a/_units/03.md
+++ b/_units/03.md
@@ -76,7 +76,7 @@ Threshold-finding models addressing this question have given way to the use of S
 
 Simple signal detection theory assumes two Gaussian distributions of signal trials and noise trials respectively. Given some amount of evidence of the signal, plotted on the x axis (or "internal response" as shown in the graph), the observer must decide on the probability that the evidence points to a signal trial or a noise trial. The observer then adopts a criterion (shown as the thick line labeld "criterion response"). Any trial for which the internal response exceeds the criterion is categorized as "signal", and any trial for which the internal response is below criterion is categorized as "noise".
 
-{% include img-figure url="/MUTOR/assets/images/unit3_sdt1.gif" description="Signal Detection Theory illustration" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt1.gif" description="Signal Detection Theory illustration" width="300px" %}
 
 The following are true given the above situation:
 "hits" are trials that fall under the signal distribution and are correctly labled "signal";
@@ -88,14 +88,14 @@ d' = z(hit) - z(false alarm),
 where z is the deviation of the criterion from the mean, given in standard units (z-scores).
 Since d' is a measurement of how far apart the two distributions are, a higher d' means that signal trials and noise trials are very clearly separated; thus, higher d' signifies better performance.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_sdt2.gif" description="SDT Criterion" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt2.gif" description="SDT Criterion" width="300px" %}
 
 
 (image source: http://www.cns.nyu.edu/~david/sdt/sdt.html)
 
 Criterion adoption (i.e. how liberal you are at labelling a trial as "signal") does not affect sensitivity as measured by d'.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_sdt3.gif" description="d prime illustration" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt3.gif" description="d prime illustration" width="400px" %}
 
 (image source: http://www.cns.nyu.edu/~david/sdt/sdt.html)
 
@@ -480,19 +480,19 @@ Reverberation (or reverb) is the result of sounds reflecting off of the surfaces
 
 {% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-direct.png" description="The first sound to hit the listener is called the direct sound." %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-plot.png" description="The direct sound from figure 3.13." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-plot.png" description="The direct sound from figure 3.13." width="450px" %}
 
 The direct sound is followed by a number of early reflections that arive at the listener after some delay and loss of energy (figures 3.15-3.16). The length of the delay and the amount of energy lost are dependant on the size of the room and the type of material used to make the surfaces (the walls, floor, and ceiling).
 
 {% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-1stRef.png" description="The early reflections arrive at the listener after a short delay and with some loss of energy." %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-early-plot.png" description="The early reflections from figure 4 plotted against time." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-early-plot.png" description="The early reflections from figure 4 plotted against time." width="450px" %}
 
 As these early reflections continue to bounce off the surfaces they begin to pile up and overlap creating reverb (figures 3.17-3.18).
 
 {% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-reverb.png" description="Reverb is as the original sound continues to bounce around the room, we perceive reverb." %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_reverb-plot.png" description="The reverb in a room tends to decay exponentially." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-plot.png" description="The reverb in a room tends to decay exponentially." width="450px" %}
 
 [Figures adapted from Howard, D.M., and Angus, J., Acoustics and Psychoacoustics, Focal Press, 1996.]
 
@@ -518,7 +518,7 @@ I=\frac{P}{4\Pi r^2}
 
 where P is the initial power of the signal, r is the distance from the source in meters, and I is the intensity in W/m^2. Notice that the denominator in the above equation is the area of a sphere due to the fact that sound radiates out in all directions in a spherical pattern. As sound continues to propagate away from the source, it diffuses over a larger and larger area (figure 8). Imagine that you are standing one meter away from a sound source and the intensity of the sound when it reaches you is 100 dB. If you move 10 meters away from the source, the sound will be spread over 100 times the area and the resulting intensity will be 1/100 of the original or 80 dB.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_inverse-square-diagram.png" description="Sound propagating away from a source diffuses over a larger and larger area." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_inverse-square-diagram.png" description="Sound propagating away from a source diffuses over a larger and larger area." width="500px" %}
 
 The later reflections also depend on the absorptive quality of the surfaces they bounce off of and can be calculated by
 
@@ -541,18 +541,18 @@ where RT_60 is the reverb time, V is the volume of the enclosure, A is the sum o
 
 Sound examples 1-3, and figures 3.20 - 3.22 are impulse responses of three different halls and their sonograms. Notice that the reverb of each hall decays in a different way and that different frequency regions decay quicker than others but that in general the low frequencies remain active longer than the high frequencies—this is a typical property of the reverb of most enclosed spaces. Also, note that the early reflections can be heard clearly in the second and third examples.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_impulse-specgram-decayenv.png" description="The reverb decays of three different rooms: response 1." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_impulse-specgram-decayenv.png" description="The reverb decays of three different rooms: response 1." width="400px" %}
 
 <audio controls src="/MUTOR/assets/audios/unit3_impulse1.wav">
 Your browser does not support the audio element.
 </audio>
 
-{% include img-figure url="/MUTOR/assets/images/unit3_impulse2-specgram-decayenv.png" description="The reverb decays of three different rooms: response 2." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_impulse2-specgram-decayenv.png" description="The reverb decays of three different rooms: response 2." width="400px" %}
 <audio controls src="/MUTOR/assets/audios/unit3_impulse2.wav">
 Your browser does not support the audio element.
 </audio>
 
- {% include img-figure url="/MUTOR/assets/images/unit3_impulse3-specgram-decayenv.png" description="The reverb decays of three different rooms: response 3." %}
+ {% include img-figure url="/MUTOR/assets/images/unit3_impulse3-specgram-decayenv.png" description="The reverb decays of three different rooms: response 3." width="400px" %}
 <audio controls src="/MUTOR/assets/audios/unit3_impulse3.wav">
 Your browser does not support the audio element.
 </audio>
@@ -610,7 +610,7 @@ Top-Down influences also play important roles in the perception of more complex 
 
 {% include note author="gh" text="In some papers I-R is described as bottom-up process. This needs to be clarified" %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_happybday.jpg" description="happy birthday" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_happybday.jpg" description="happy birthday" width="300px" %}
 
 A line from the Happy Birthday song, illustrating the principle of gap-fill. More on these top-down expectations for melodic processes will be discussed in Unit 9.
 
@@ -635,7 +635,7 @@ Audio engineers make use of the precedence effect in the design of concert halls
 
 Like the PrecedenceEffect, the FranssenEffect has to do with perceived sound sources. In a two-channel speaker system, if a tone is presented with rapid onset to one speaker, and this tone is ramped off at the same time as when another tone in the opposite speaker is ramped on and sustained, this combination of tones is perceived as just one tone coming from the first speaker (i.e. the speaker that played the onset). The effect is obtained with narrow-band sounds, and only in echoic environments.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_franssen.gif" description="Franssen Effect" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_franssen.gif" description="Franssen Effect" width="450px" %}
 (adapted from Dent, Tollin, & Yin, 2004.)
 
 The Franssen Effect. If a rapid-onset tone is presented at the left speaker and then decays slowly while another tone at the right is presented with slowly increasing amplitude, the percept is of a single stimulus coming from the left.
