--- a/_units/08.md
+++ b/_units/08.md
@@ -125,16 +125,8 @@ The dots that are closer together are perceived as being grouped together.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="" %}
 ## Common fate
 - elements that change similarly over time tend to be grouped together. 
-<html>
-  <head>
-    <title>Common Fate</title>
-  </head>
-  <body>
-    <video controls src="/MUTOR/assets/videos/unit8_Common-Fate.mov">
-      Your browser does not support the audio element.
-    </video>
-  </body>
-</html>
+
+{% include img-figure url="/MUTOR/assets/images/unit8_Common-Fate.gif" description="Common Fate" %}
 
 # Melody
 
